# melhousing

./: .gitignore  LICENSE  README.md  environment.yaml  requirements.txt  setup.cfg  setup.py
data/processed/: processeddata.csv
data/raw/: sampledata.csv
melhousing/: __init__.py
melhousing/classes/: __init__.py  housingdata.py
melhousing/constants/: __init__.py  filepaths.py  myconstants.py
melhousing/scripts_internal/: main_internal.py
notebook/: pandas_equivalent.ipynb  pyspark_demo.ipynb
notebook/.ipynb_checkpoints/: pyspark_demo-checkpoint.ipynb
scripts/: main.py  main2.py  new_script.py
scripts/expconfig/: __init__.py  locconfig.json  locconfig.py
tests/: test_demo.py
