[metadata]
name = melhousing
version = 1.0
author = JoshuaPhuongLe
author_email = phuonglevu3112@gmail.com
description = A small example package for Melbourne housing data set
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshuavaple/melhousing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = melhousing
include = *

[options]
install_requires =
    ipykernel==6.19.4
    pandas==1.5.2
    pathlib==1.0.1
    pytest==7.2.1