[metadata]
name = melhousing
version = 1.0
author = JoshuaPhuongLe
author_email = phuonglevu3112@gmail.com
description = A small example package for Melbourne housing data set
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshuavaple/melhousing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


# for src layout:
# ├── src
# │   └── mypackage
# │       ├── __init__.py
# │       └── mod1.py
# ├── setup.py
# └── setup.cfg

# [options]
# package_dir=
#     =src
# packages=find:

# [options.packages.find]
# where=src

[options]
package_dir=
    =melhousing
packages=find:

[options.packages.find]
where=melhousing

# [options]
# install_requires =
#     ipykernel==6.19.4
#     pandas==1.5.2
#     pathlib==1.0.1
#     pytest==7.2.1